@@ -1,13 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/RcppExports.R, R/anytime.R
-\name{anytime_cpp}
+% Please edit documentation in R/anytime.R
+\name{anytime}
 \alias{anydate}
 \alias{anytime}
-\alias{anytime_cpp}
 \title{Parse POSIXct objects from input data}
 \usage{
-anytime_cpp(x, tz = "UTC")
-
 anytime(x, tz = getTZ())
 
 anydate(x, tz = getTZ())
@@ -77,6 +74,10 @@ anydate(times)
 }
 \author{
 Dirk Eddelbuettel
+}
+\references{
+This StackOverflow answer provided the initial idea:
+\url{http://stackoverflow.com/a/3787188/143305}.
 }
 \seealso{
 \code{\link{anytime-package}}
